--- a/app/index.html
+++ b/app/index.html
@@ -108,11 +108,11 @@
   </div>
 </div>
 
-  <div id="testimonials" class="page-section page-section--testimonials">
-    <div class="wrapper">
+  <div id="testimonials" class="page-section page-section--no-b-until-medium page-section--testimonials">
+    <div class="wrapper wrapper--no-padding-until-medium">
       
       <h2 class="section-title section-title--blue"><img class="section-title__icon" src="assets/images/icons/comment.svg">Real <strong>Testimonials</strong></h2>
-      <div class="row row--gutters">
+      <div class="row row--gutters row--equal-height row--gutters-small row--t-padding generic-content-container">
         <div class="row__medium-4">
           <div class="testimonials">
             <div class="testimonials__photo">
@@ -135,14 +135,14 @@
             </div>
       </div>
        <div class="row__medium-4">
-         <div class="testimonials">
+         <div class="testimonials testimonials--last">
             <div class="testimonials__photo">
-         <img src="assets/images/testimonial-cat.jpg">
-       </div>
-          <h3 class="testimonials__title">Cat McKitty</h3>
-          <h4 class="testimonials__subtitle">6 Time Escaper</h4>
-          <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>  
-      </div> 
+              <img src="assets/images/testimonial-cat.jpg">
+            </div>
+            <h3 class="testimonials__title">Cat McKitty</h3>
+            <h4 class="testimonials__subtitle">6 Time Escaper</h4>
+            <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>  
+        </div> 
       </div>
     </div>
     </div>
