--- a/app/index.html
+++ b/app/index.html
@@ -12,16 +12,22 @@
 
 </head>
 <body>
-  <header>
-    <img src="assets/images/icons/clear-view-escapes.svg">
-    <a class="btn" href="#">Get in Touch</a>
-    <nav>
-      <ul>
-        <li><a href="#our-beginning">Our Beginning</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="wrapper">
+      <div class="site-header__logo">
+      <img src="assets/images/icons/clear-view-escapes.svg">  
+      </div>
+        <div class="site-header__btn-container">
+          <a class="btn" href="#">Get in Touch</a>
+        </div>
+        <nav class="primary-nav primary-nav--pull-right">
+          <ul>
+            <li><a href="#our-beginning">Our Beginning</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+          </ul>
+        </nav>
+    </div>
   </header>
 
   <div class="large-hero">
@@ -151,7 +157,7 @@
 
   <footer class="site-footer">
    <div class="wrapper">
-      <p><span class="site-footer__text"></span>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a class="btn btn--orange" href="#">Get in Touch</a></p>
+      <p><span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved. </span><a class="btn btn--orange" href="#">Get in Touch</a></p>
    </div>
   </footer>
 </body>
