--- a/app/index.html
+++ b/app/index.html
@@ -20,13 +20,15 @@
         <div class="site-header__btn-container">
           <a class="btn" href="#">Get in Touch</a>
         </div>
-        <nav class="primary-nav primary-nav--pull-right">
+        <div class="site-header__menu-content">
+          <nav class="primary-nav primary-nav--pull-right">
           <ul>
             <li><a href="#our-beginning">Our Beginning</a></li>
             <li><a href="#features">Features</a></li>
             <li><a href="#testimonials">Testimonials</a></li>
           </ul>
         </nav>
+        </div>
     </div>
   </header>
 
